--- a/example.html
+++ b/example.html
@@ -5,6 +5,7 @@
 	<title>JsVeyboard Example</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="jsveyboard.css">
 	<style type="text/css">
 	   body {
 			  padding-top: 50px;
@@ -95,7 +96,8 @@
 	<script type="text/javascript">
 		jsveyboard('#mobilePhoneInput', {
 			style: 'MOBILE',
-			btnstyle: 'btn-success'
+			btnstyle: 'btn btn-lg btn-success',
+			show: 'focus'
 		});
 	</script>
 </body>
